--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@ const navDesignClass: NavClassConfig = {
       siteData.informations && siteData.informations.length > 0 && (
         <SimpleMardownRender
           markdown={siteData.informations}
-          classes="markdown *:mb-0 *:text-[0.84211rem] *:text-center mx-auto max-w-[80%] px-4"
+          classes="markdown *:mb-0 *:text-[0.84211rem] *:text-center mx-auto lg:max-w-[80%] px-4"
         />
       )
     }
