--- a/src/components/views/home/HomeView.astro
+++ b/src/components/views/home/HomeView.astro
@@ -13,18 +13,21 @@ const props = Astro.props;
     <div
       class="container-in-section flex-container !my-0 !gap-[1.89rem] !py-[2.95rem]"
     >
-      <h1 class="font-mesmerize text-h1-home">{homeData.intro_title}</h1>
+      <h1 class="text-center font-mesmerize text-h1-home">
+        {homeData.intro_title}
+      </h1>
       <p class="markdown text-center text-[1.31579rem]">
         {homeData.intro_text}
       </p>
     </div>
   </section>
+  {/* Offre */}
   <section class="section gris-1 !py-0">
     <div
       class="container-in-section flex-container !gap-[3.21rem] !py-[1.84rem]"
     >
       <h2 class="title-box home mb-0">{homeData.intro_offre}</h2>
-      <div class="grid grid-cols-4 gap-1">
+      <div class="grid grid-cols-1 gap-1 md:grid-cols-2 lg:grid-cols-4">
         {
           homeData.offres.map((offre, idex) => {
             return <OffreCard {offre} />;
@@ -33,6 +36,7 @@ const props = Astro.props;
       </div>
     </div>
   </section>
+  {/* Principe */}
   <section class="section !py-0">
     <div
       class="container-in-section flex-container !gap-[2.74rem] !py-[2.95rem]"
@@ -47,11 +51,11 @@ const props = Astro.props;
         />
         <SimpleMardownRender
           markdown={homeData.principe_text}
-          classes="markdown px-4"
+          classes="markdown lg:px-4"
         />
       </div>
     </div>
-    <div class="container-in-section flex-container !flex-row">
+    <div class="container-in-section flex-container lg:!flex-row">
       <MDXImage
         src={homeData.principe_image.src}
         alt={homeData.principe_image.alt}
@@ -70,6 +74,8 @@ const props = Astro.props;
       </div>
     </div>
   </section>
+  {/* Témoignages */}
   <TestimonialSlider testimonials={homeData.testimonial} />
+  {/* Gallerie */}
   <Gallery gallery={homeData.gallery} />
 </>
