--- a/src/components/views/complices/CompliceView.astro
+++ b/src/components/views/complices/CompliceView.astro
@@ -13,7 +13,7 @@ const props = Astro.props;
     <div class="container-in-section flex-container">
       <SimpleMardownRender
         markdown={associateData.intro}
-        classes="markdown text-center"
+        classes="markdown lg:text-center"
       />
     </div>
   </section>
