--- a/src/components/views/contact/ContactView.astro
+++ b/src/components/views/contact/ContactView.astro
@@ -10,7 +10,9 @@ const props = Astro.props;
   <Hero title={teamData.contact.title} image={teamData.contact.hero_bg} />
   <section class="section !pb-0">
     <div class="container-in-section flex-container">
-      <p class="max-w-sm text-center text-[1.47368rem] font-bold leading-none">
+      <p
+        class="max-w-sm text-center text-[1.26316rem] font-bold leading-none lg:text-[1.47368rem]"
+      >
         {teamData.contact.before_text}
       </p>
     </div>
