--- a/src/components/views/equipe/EquipeCard.astro
+++ b/src/components/views/equipe/EquipeCard.astro
@@ -37,37 +37,41 @@ const {
       class:list={[
         "group flex w-full gap-[2.53rem] py-[2.26rem] transition-all",
         {
-          "flex-col lg:flex-row": idx % 2 === 0,
+          "flex-col md:flex-row": idx % 2 === 0,
         },
         {
-          "flex-col lg:flex-row-reverse": idx % 2 === 1,
+          "flex-col md:flex-row-reverse": idx % 2 === 1,
         },
       ]}
     >
-      <div class="flex-none">
+      <div class="flex flex-none justify-center">
         <MDXImage
           src={image_inactive}
           alt={name}
           width={630}
-          class="rounded-full group-has-[input:checked]:hidden md:w-[14.10526rem]"
+          class="w-full rounded-full"
+          frameClass="w-[14.10526rem] lg:w-[14.10526rem] group-has-[input:checked]:hidden"
         />
         <MDXImage
           src={image_active}
           alt={name}
           width={630}
-          class="hidden rounded-full group-has-[input:checked]:block md:w-[14.10526rem]"
+          class=" w-[14.10526rem] rounded-full lg:w-[14.10526rem]"
+          frameClass="hidden group-has-[input:checked]:block w-[14.10526] md:w-[14.10526rem]"
         />
       </div>
       <div class="flex flex-col">
-        <h2 class="mb-1 text-[1.47368rem]">{name}</h2>
+        <h2 class="mb-1 text-center text-[1.26316rem] md:text-left md:text-[1.47368rem]">
+          {name}
+        </h2>
         <p class="text-[1.05263rem]">{role}</p>
         <p class="mb-4 text-[0.84211rem] italic">{education}</p>
-        <p class="mb-4 w-fit flex-none bg-neutre px-1 font-bold text-primary">
+        <p class="mb-4 w-fit flex-none bg-neutre px-1 text-[0.94737rem] font-bold text-primary">
           “{citation}”
         </p>
         <SimpleMardownRender
           markdown={bio}
-          classes="prose !max-w-full group-has-[input:checked]:line-clamp-none line-clamp-4 transition-all"
+          classes="prose *:text-[0.94737rem] !max-w-full group-has-[input:checked]:line-clamp-none line-clamp-4 transition-all"
         />
         <label for={`chk-${idx}`} class="m-2 flex translate-x-2 justify-end">
           <input id={`chk-${idx}`} type="checkbox" class="peer/chk hidden" />
