--- a/src/components/views/home/OffreCard.astro
+++ b/src/components/views/home/OffreCard.astro
@@ -10,14 +10,18 @@ const { offre } = Astro.props;
       <MDXImage
         src={offre?.image.src}
         alt={offre?.image.alt}
-        width={321}
-        height={279}
+        width={630}
+        class="w-full lg:w-[231px]"
       />
     )
   }
-  <h3 class="px-4">{offre.title}</h3>
-  <p class="px-4 text-[0.94737rem]">{offre.base_line}</p>
-  <p class="px-4 text-[0.84211rem] italic text-black opacity-50">
+  <h3 class="lg:px-4">{offre.title}</h3>
+  <p class="text-[0.94737rem] lg:px-4 lg:text-[0.94737rem]">
+    {offre.base_line}
+  </p>
+  <p
+    class="text-[0.84211rem] italic text-black opacity-50 lg:px-4 lg:text-[0.84211rem]"
+  >
     {
       offre.text
         .split(" ")
