--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -28,7 +28,7 @@ const {
     {frontmatter}
     {noRobots}
   />
-  <body>
+  <body class="home">
     <SkipLinks />
     <Nav {homeData} />
     <main id="main-content" class:list={["relative flex flex-col", classes]}>
