--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -12,18 +12,18 @@ const navDesignClasses: NavClassConfig = {
   navRoot:
     "container mx-auto max-w-screen-xl z-20 flex flex-wrap items-center justify-between py-[1.47rem]",
   ulList:
-    "mb-0 text-[1.4375rem] my-4 hidden md:flex flex-col flex-wrap items-start justify-center gap-2 p-4 font-medium md:mt-0 md:flex-row md:p-0 lg:items-center",
+    "mb-0 text-[1.4375rem] bg-gray-700 rounded lg:bg-transparent my-4 hidden lg:flex flex-col flex-wrap items-start justify-center gap-2 p-4 font-medium lg:mt-0 lg:flex-row lg:p-0 lg:items-center",
   menu: {
     button: "btn btn-primary",
     ulList:
-      "flex w-full flex-col divide-y divide-gray-100 rounded-lg bg-white shadow before:h-4 after:h-4 dark:divide-gray-600 dark:bg-gray-700",
+      "flex w-full flex-col divide-y divide-gray-100 rounded-lg bg-white shadow before:h-4 after:h-4",
   },
   link: (isButton) => {
     return isButton ? [`btn btn-primary`] : [`btn btn-white`];
   },
   mobileButton: {
     button:
-      "inline-flex h-10 w-10 items-center justify-center rounded-lg p-2 text-sm text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 md:hidden dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600",
+      "inline-flex h-10 w-10 items-center justify-center rounded-lg p-2 text-sm text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-700 lg:hidden",
     svg: "h-5 w-5",
   },
 };
