--- a/src/components/views/complices/CompliceView.astro
+++ b/src/components/views/complices/CompliceView.astro
@@ -8,7 +8,7 @@ const props = Astro.props;
 ---
 
 <>
-  <Hero title={associateData.title} image={associateData.hero_bg} />
+  <Hero title={associateData.hero_title} image={associateData.hero_bg} />
   <section class="section !pb-0">
     <div class="container-in-section flex-container">
       <SimpleMardownRender
