--- a/src/components/views/equipe/EquipeView.astro
+++ b/src/components/views/equipe/EquipeView.astro
@@ -7,7 +7,7 @@ const props = Astro.props;
 ---
 
 <>
-  <Hero title={teamData.equipe.title} image={teamData.equipe.hero_bg} />
+  <Hero title={teamData.equipe.hero_title} image={teamData.equipe.hero_bg} />
   <section class="section">
     <div
       class="container-in-section flex-container divide-y-2 divide-black/50 lg:!max-w-[80%]"
