--- a/src/components/views/contact/ContactView.astro
+++ b/src/components/views/contact/ContactView.astro
@@ -7,7 +7,7 @@ const props = Astro.props;
 ---
 
 <>
-  <Hero title={teamData.contact.title} image={teamData.contact.hero_bg} />
+  <Hero title={teamData.contact.hero_title} image={teamData.contact.hero_bg} />
   <section class="section !pb-0">
     <div class="container-in-section flex-container">
       <p
