--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -55,6 +55,9 @@
     [data-navlink] {
       @apply px-2 py-1 hover:bg-white;
     }
+    [aria-current="page"] {
+      @apply !bg-white;
+    }
   }
   .home [data-menu="Principal"] [aria-current="page"] {
     @apply !bg-primary lg:!bg-white;
