--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,6 +2,7 @@
 import Lift from "@components/Lift.astro";
 import "../styles/base.css";
 // component import
+import DisplayBreakpoint from "@components/DisplayBreakpoint.astro";
 import Footer from "@components/Footer.astro";
 import MainHead from "@components/MainHead.astro";
 import Nav from "@components/NavHome.astro";
@@ -36,5 +37,6 @@ const {
       <Lift />
     </main>
     <Footer />
+    <DisplayBreakpoint />
   </body>
 </html>
