finalized, before QA

--- a/src/components/NavHome.astro
+++ b/src/components/NavHome.astro
@@ -88,7 +88,7 @@ const { homeData } = Astro.props;
     </a>
     <SimpleMardownRender
       markdown={homeData.hero_text}
-      classes="strongiswhite !font-light mb-6 lg:mb-0 text-center max-w-[41.21053rem] *:lg:text-hero-home *:hero-home-mobile"
+      classes="strongiswhite !font-light px-4 lg:px-0 mb-6 lg:mb-0 text-center max-w-[41.21053rem] *:lg:text-hero-home *:hero-home-mobile"
     />
   </div>
   <div class="right-0 top-0 z-20 w-full lg:absolute">
