--- a/src/components/views/home/HomeView.astro
+++ b/src/components/views/home/HomeView.astro
@@ -15,7 +15,7 @@ const props = Astro.props;
     <div
       class="container-in-section flex-container !my-0 !gap-[1.89rem] !py-[2.95rem]"
     >
-      <h1 class="text-center font-mesmerize text-h1-home">
+      <h1 class="font-mesmerize text-h1-home lg:text-center">
         {homeData.intro_title}
       </h1>
       <p class="markdown text-[0.94737rem] md:text-center lg:text-[1.31579rem]">
