--- a/src/components/views/home/OffreCard.astro
+++ b/src/components/views/home/OffreCard.astro
@@ -4,7 +4,7 @@ import MDXImage from "@components/mdx/MDXImage.astro";
 const { offre } = Astro.props;
 ---
 
-<div class="flex flex-col gap-4 text-left">
+<div class="mb-4 flex flex-col gap-4 text-left lg:mb-auto">
   {
     offre?.image && (
       <MDXImage
